<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/testView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/income_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:hint="@string/enter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/rent_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:hint="@string/enter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/food_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:textColor="@android:color/black"
            android:hint="@string/enter"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportation"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/transportation_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:paddingRight="24dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recreation"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/recreation_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:hint="@string/enter"
            />
    </LinearLayout>

    <Button
        android:id="@+id/budget_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/visualize_button"
        android:text="@string/visualize"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

</LinearLayout>